samples/_failures_safe/1761192154_7b64d3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e727fc65.c: In function ‘main’:
./samples/SAFE/__tmp_e727fc65.c:165:5: error: expected declaration or statement at end of input
  165 |     print_hex(decompressed.data, decompressed.size);
      |     ^~~~~~~~~
